src/runtime/tests/golden/errors/20_interface_wrong_return_type/source.z42
interface IValue {
    int Get();
}

class Counter : IValue {
    string Get() { return "bad"; }  // returns string but interface requires int
}

void Main() {
    Counter c = new Counter();
}
